--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,8 @@
 # npm registry
-registry = https://registry.npm.taobao.org
+registry = https://registry.npmmirror.com
 # sass
-sass_binary_site = https://npm.taobao.org/mirrors/node-sass/
+sass_binary_site = https://npmmirror.com/mirrors/node-sass/
 # puppeteer
-puppeteer_download_host = https://npm.taobao.org/mirrors
+puppeteer_download_host = https://npmmirror.com/mirrors
 # electron
-electron_mirror = https://npm.taobao.org/mirrors/electron/
+electron_mirror = https://npmmirror.com/mirrors/electron/
